--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav><a href="#contact" class="dot"><button class="reachform">REACH OUT</button></a></nav>
     </header>
     <div id="home">
-       <div><img src="/WhatsApp Image 2025-10-12 at 16.58.36.jpeg" alt="" class="pfp"></div>
+       <div><img src="WhatsApp Image 2025-10-12 at 16.58.36.jpeg" alt="" class="pfp"></div>
        <div class="introduction">
         <span><h4>HI, I AM SHIVENDRA AND I DEVELOP</h4>
         <h1 class="tagline">THE PERFECT <br>WEBSITE</h1>
@@ -41,7 +41,7 @@
 <div id="about">
     <span class="career"><h1 class="line">ABOUT ME</h1>
     <br> I AM SHIVENDRA PRATAP SINGH CURRNTLY DOING BACHELOR <br>OF TECHNOLOGY IN COMPUTER SCIENCE , LOOKING FORWARD TO JOIN <br>THE CORPORATE ENVIRONMENT AND TO <br>LEARN FROM THE CHALLANGES.</span>
-    <span class="imgs"><img src="/WhatsApp Image 2025-10-12 at 00.16.26 (1).jpeg" alt="" class="fame">
+    <span class="imgs"><img src="WhatsApp Image 2025-10-12 at 00.16.26 (1).jpeg" alt="" class="fame">
     <img src="https://media.licdn.com/dms/image/v2/D5622AQEjUILMTMH2sA/feedshare-shrink_1280/B56ZnSwMZHG4As-/0/1760177489474?e=1762992000&v=beta&t=fsSWTv-WpO1aoKtbYTnEu0wXERqSA-hVe6BFG6HAh44" alt="" class="fame"></span>
 </div>
 <div class="achievements"><span class="imgs"></span><img src="https://media.licdn.com/dms/image/v2/D5622AQGbZoqK9bLwpQ/feedshare-shrink_1280/B56ZnSwMZCG0As-/0/1760177485574?e=1762992000&v=beta&t=bpSI5odTzLL1l4KgvIReKyLjUjdeQ_PRjZiM8_XZVAg" alt="" class="fame2"><img src="https://media.licdn.com/dms/image/v2/D5622AQGA5U5_ibOSig/feedshare-shrink_1280/B56ZmLPBWxHUAs-/0/1758977606885?e=1762992000&v=beta&t=dxfjUxJtDtGFD9rp9otXRHOEW-eywZrH1CNj8NCS1e8" alt="" class="fame2"><img src="https://media.licdn.com/dms/image/v2/D5622AQEX_O3rzUtuKQ/feedshare-shrink_2048_1536/B56ZjupxA8HMA0-/0/1756350584666?e=1762992000&v=beta&t=P7-4gpAloAQPt_s02G6of-Tf5mtu1EuU5sjLvVDaLTc" alt="" class="fame2"></div>
@@ -53,7 +53,7 @@
 <a href="https://www.instagram.com/shivendra.exe?igsh=MTc2ajZlN2JjbTZhNQ==" class="icon bi-instagram"></a>
 <a href="https://www.linkedin.com/in/shivendra-pratap-singh-998b772a4?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="icon bi-linkedin"></a>
 </div>
-<div><img src="/WhatsApp Image 2025-10-12 at 00.16.27.jpeg" alt="" class="imgconnect"></div>
+<div><img src="WhatsApp Image 2025-10-12 at 00.16.27.jpeg" alt="" class="imgconnect"></div>
 
 </div>
 <footer>
